--- a/Max.html
+++ b/Max.html
@@ -1,1 +1,1 @@
-<p><a href="http://127.0.0.1:50105/Daniel.html">Dan the man</a></p>
+<h6><a href="http://127.0.0.1:50105/Daniel.html">Dan the man</a></h6>
