--- a/Max.html
+++ b/Max.html
@@ -1,1 +1,14 @@
-<h1><a href="http://127.0.0.1:50105/Daniel.html">Dan the man</a></h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="styles.css">
+    <title>
+        Max's Bio
+    </title>
+</head>
+
+<body>
+    <h1><a href="http://127.0.0.1:50227/Daniel.html" target="_blank">Dan the man</a></h1>
+    <p>lol</p>
+</body>
+</html>
