--- a/Daniel.html
+++ b/Daniel.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>Daniel's Bio</title>
+    <link rel = "stylesheet" href = "./styles/style.css">
   </head>
   <body>
     <h1>Memes</h1>
-    <p></p>
+    <p>My name is Daniel Ramirez. </p>
   </body>
 </html>
