--- a/Rocsana.html
+++ b/Rocsana.html
@@ -6,6 +6,6 @@
     </head>
     <body>
          <h1>Short Biography</h1>
-    <p>My first paragraph.</p>
+    <p>blAh blah</p>
   </body>
 </html>
