--- a/Rocsana.html
+++ b/Rocsana.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link
-        <Title>Rocsana De Leon</Title>
-    </head>
-    <body>
-         <h1>Short Biography</h1>
+    <link <Title>Rocsana De Leon</Title>
+</head>
+
+<body>
+    <h1>Short Biography</h1>
     <p>blAh blah</p>
-  </body>
+</body>
 </html>
