--- a/Rocsana.html
+++ b/Rocsana.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <link <Title>Rocsana De Leon</Title>
+
+<head>
+    <link>
+    <Title>Rocsana De Leon</Title>
 </head>
 
 <body>
     <h1>Short Biography</h1>
     <p>blAh blah</p>
 </body>
+
 </html>
