3rd Commit, I think

--- a/Rocsana.html
+++ b/Rocsana.html
@@ -8,4 +8,17 @@
          <h1>Short Biography</h1>
     <p>blAh blah</p>
   </body>
+<head> Favorite Quote:</head>
 </html>
+<head>
+<body>
+    <h1> List of Favorite Things: </h1>
+    <ol>
+        <li> Any kind of music</li>
+        <li> Traveling</li>
+        <li> Trying new cultures</li>
+        <li> Meeting new people</li>
+    </ol>
+    </body></head>
+<h1>Top ten things I want to de when I graduate, include:</h1>
+<Ul> 1) </Ul>
