--- a/Daniel.html
+++ b/Daniel.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Daniel's Bio</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
-
-<body>
-    <h1>Memes</h1>
     <img src="callcard.png" alt="cc pict here" width="216" height="192">
-
-        <h1>Who Am I?</h1>
-        <p>My name is Daniel Ramirez. </p>
-    </body>
-
+<body>
+    <h1>Who Am I?</h1>
+    <p>My name is Daniel Ramirez. I was born on April 25th, 2001 in Greenbrae, California. My goals in life are to become a video game developer. My hobbies include gaming, archery, and reading.
+    My name is actually based on someone in the Bible, as well as my brother's name. </p>
+</body>
 </html>
