--- a/Daniel.html
+++ b/Daniel.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Who Am I?</h1>
     <p>My name is Daniel Ramirez. I was born on April 25th, 2001 in Greenbrae, California. My goals in life are to become a video game developer. My hobbies include gaming, archery, and reading.
-    My name is actually based on someone in the Bible, as well as my brother's name. I also have the zodiac sign of the Taurus.</p>
+    My name is actually based on someone in the Bible, as well as my brothers' names. I also have the zodiac sign of the Taurus.</p>
+    <h3>My favorite quote</h3>
+    <p>"It's all strength and power with you. If you're so desparate for a show of force, I'll be happy to oblige." - Kliff, Fire Emblem Echoes: Shadows Of Valentia</p>
 </body>
 </html>
