--- a/Max.html
+++ b/Max.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1><a href="http://127.0.0.1:50227/Daniel.html" target="_blank">Dan the man</a></h1>
     <p>My name is Max Rahe and I am 15 yeas old. I am in 10th grade and almost old enough to drive. I like to play video games and have been fasinated with coding for almost 4 years.</p>
+    <h4><a href="Daniel.html" target="_blank">Daniel's page</a></h4>
 </body>
 
 </html>
