--- a/Rocsana.html
+++ b/Rocsana.html
@@ -5,7 +5,22 @@
   </head>
   <body>
     <h2> Background Info.</h2>
-    <p>Rocsana was born on April 9th, in Marin general hospital. Growing up she was really into dolls and watching tv shows with her older sister. Her hobbies include playing soccer, hiking, and running. She has four other siblings and she is the middle child, Rocsana enjoys spending time with her family and friends. </p>
-    <h4> Favorite Quote: ".." </h4>
+    <p> Rocsana was born on April 9th, in Marin general hospital. Growing up she was really into dolls and watching tv shows with her older sister. Her hobbies include playing soccer, hiking, and running. She has four other siblings and she is the middle child, Rocsana enjoys spending time with her family and friends. Some of her interest are reading good books and trying new things, she overall is really adventurous and optimistic.  </p>
+    <h4> Favorite Quote: "Winter is coming" </h4>
   </body>
 </html>
+<h4>Top Ten List:</h4>
+  <ol>
+    <li>Go to college</li>
+    <li>Spend more time with friends</li>
+    <li>To go out more into nature</li>
+    <li>Work less</li>
+    <li>Watch t.v. shows</li>
+    <li>Read/Discover new books</li>
+    <li>Go on more runs</li>
+    <li> Visit my grandparent's home</li>
+    <li> Buy a new bike</li>
+    <li> Save money</li>
+    <li>Watch t.v. shows</li>
+
+  </ol>
