--- a/Daniel.html
+++ b/Daniel.html
@@ -11,5 +11,25 @@
     My name is actually based on someone in the Bible, as well as my brothers' names. I also have the zodiac sign of the Taurus.</p>
     <h3>My favorite quote</h3>
     <p>"It's all strength and power with you. If you're so desparate for a show of force, I'll be happy to oblige." - Kliff, Fire Emblem Echoes: Shadows Of Valentia</p>
+    <hr/>
+    <h3>My List of Favorite Things</h3>
+    <ul>
+    <li>Food: Breaded Steak</li>
+    <li>Video Game Genre: RPGs</li>
+    <li>Color: Green/Red</li>
+    </ul>
+    <h3>Top Ten Goals After Graduation</h3>
+    <ol>
+    <li>Attend College</li>
+    <li>Move out from my parents' home</li>
+    <li>Seek out a job</li>
+    <li></li>
+
+
+
+
+
+
+    </ol>
 </body>
 </html>
