--- a/Daniel.html
+++ b/Daniel.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Daniel's Bio</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-    <img src="callcard.png" alt="cc pict here" width="216" height="192">
+    <img src="./images/callcard.png" alt="cc pict here" width="216" height="192">
 <body>
     <h1>Who Am I?</h1>
     <p>My name is Daniel Ramirez. I was born on April 25th, 2001 in Greenbrae, California. My goals in life are to become a video game developer. My hobbies include gaming, archery, and reading.
