--- a/Max.html
+++ b/Max.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
+    <h1>Maxwell Rahe</h1>
+    <img src="Morgoono.png" alt="cc pict here" width="300" height="200">
     <p>My name is Max Rahe and I am 15 yeas old. I am in 10th grade and almost old enough to drive. I like to play video games and have been fasinated with coding for almost 4 years.</p>
+    <h3>My favorite quote</h3>
+    <p>"I didn't know owls could fly" -H20 Delirious (2016)</p>
     <h4><a href="Daniel.html" target="_blank">Daniel's page</a></h4>
 </body>
 
