added to top ten list

--- a/Daniel.html
+++ b/Daniel.html
@@ -22,14 +22,14 @@
     <ol>
     <li>Attend College</li>
     <li>Move out from my parents' home</li>
-    <li>Seek out a job</li>
+    <li>Seek out a decent-paying job</li>
+    <li>Make more friends</li>
+    <li>Open my mind to new things</li>
+    <li>Visit Mexico</li>
+    <li>Save up money for an adventure</li>
     <li></li>
-
-
-
-
-
-
+    <li></li>
+    <li></li>
     </ol>
 </body>
 </html>
