Finished top ten list

--- a/Daniel.html
+++ b/Daniel.html
@@ -27,9 +27,10 @@
     <li>Open my mind to new things</li>
     <li>Visit Mexico</li>
     <li>Save up money for an adventure</li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Get my own pet</li>
+    <li>Stay in contact with high school friends</li>
+    <li>Have my own car</li>
     </ol>
+
 </body>
 </html>
