--- a/Rocsana.html
+++ b/Rocsana.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Rocsana's Biography</title>
+      <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <img src="./Pics/Rocks.jpg" Width="" Height= "350">
