--- a/Rocsana.html
+++ b/Rocsana.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Rocsana's Biography</title>
+
   </head>
   <body>
     <img src="images/Rocks.jpg" Width="" Height= "350">
@@ -32,7 +33,7 @@
           <ul> Pasta</ul>
           <ul> Ice Cream</ul>
           </li>
-        <li>Favortie T.V.shows:
+        <li>T.V.shows:
             <ul> The office</ul>
             <ul> Grey's Anatomy</ul>
             <ul> Criminal Minds</ul>
@@ -41,6 +42,22 @@
             <ul> Fear of the Walking Dead</ul>
             <ul> Game of Thrones!</ul>
           </li>
-      </ul>
+          <li>The Outdoors
+              Sleeping
+              family
+              Being Organized
+              Doodling
+          </li>
+     </ul>
+      <hr/>
+      <h5>4 Favorite Websites:</h5>
+      <ol>
+          Google: <a href="http://Google.com" target="_blank"></a>
+          Youtube: <a href="http:// Youtube.com" target
+          Netflix:  <a href=
+
+
+        < /ol>
+
      </body>
 </html>
