--- a/Rocsana.html
+++ b/Rocsana.html
@@ -2,9 +2,9 @@
 <html>
 <head>
       <link rel="stylesheet" href="styles.css">
-       <title>Rocsana's Biography</title>
     </head>
   <body>
+             <title>Rocsana's Biography</title>
     <img src="./Pics/Rocks.jpg" Width="" Height= "350">
       <h2> Background Info.</h2>
       <hr/>
@@ -51,11 +51,9 @@
      </ul>
       <hr/>
       <h5>4 Favorite Websites:</h5>
-      <ol>
-          Google: <a href="http://Google.com" target="_blank"></a>
-          Youtube: <a href="http:// Youtube.com" target="_blank"></a>
-
-        </ol>
-
+      <table>
+        Google: <a href="http://Google.com" target="_blank"></a>
+         Youtube: <a href="http:// Youtube.com" target="_blank"></a>
+      </table>
      </body>
 </html>
