--- a/Daniel.html
+++ b/Daniel.html
@@ -4,6 +4,7 @@
     <title>Daniel's Bio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+    <h1>Daniel Ramirez</h1>
     <img src="./images/callcard.png" alt="cc pict here" width="216" height="192">
 <body>
     <h1>Who Am I?</h1>
@@ -31,6 +32,20 @@
     <li>Stay in contact with high school friends</li>
     <li>Have my own car</li>
     </ol>
-
+    <h3>My Four Favorite Websites</h3>
+    <table>
+    <tr>
+    <th>Website Name</th>
+    </tr>
+    <tr>
+    <a href="https://www.youtube.com/" target="_blank">YouTube</a>
+    <a href="https://twitter.com/" target="_blank">Twitter</a>
+    <a href="https://www.amazon.com/" target="_blank">Amazon</a>
+    <a href="https://phansite.net/" target="_blank">The Phantom Aficiando Website</a>
+    </tr>
+    </table>
+    <hr/>
+    <a href="Max.html" target="_blank">Max's Bio</a>
+    <a href="Rocsana.html" target="_blank">Rocsana's Bio</a>
 </body>
 </html>
