--- a/Rocsana.html
+++ b/Rocsana.html
@@ -4,7 +4,8 @@
       <link rel="stylesheet" href="styles.css">
     </head>
   <body>
-             <title>Rocsana's Biography</title>
+     <title>Rocsana's Webpage</title>
+      <h1> Rocsana De Leon</h1>
     <img src="./Pics/Rocks.jpg" Width="" Height= "350">
       <h2> Background Info.</h2>
       <hr/>
@@ -42,18 +43,22 @@
             <ul> Fear of the Walking Dead</ul>
             <ul> Game of Thrones!</ul>
           </li>
-          <li>The Outdoors
-              Sleeping
-              family
-              Being Organized
-              Doodling
-          </li>
+          <li>The Outdoors</li>
+          <li>Sleeping</li>
+          <li> family</li>
+          <li>  Being Organized</li>
+             <li> Doodling </li>
      </ul>
       <hr/>
       <h5>4 Favorite Websites:</h5>
       <table>
-        Google: <a href="http://Google.com" target="_blank"></a>
-         Youtube: <a href="http:// Youtube.com" target="_blank"></a>
+          <th>Website</th>
+          <th>Link</th>
+          <tr>
+              Google: <td> <a href="http://Google.com" target="_blank"></a></td>
+              Youtube: <td> <a href="http:// Youtube.com" target="_blank"></a></td>
+
+
       </table>
      </body>
 </html>
