--- a/Max.html
+++ b/Max.html
@@ -15,6 +15,26 @@
     <h3>My favorite quote</h3>
     <p>"I didn't know owls could fly" -H20 Delirious (2016)</p>
     <hr>
+    <h3>My List of Favorite Things</h3>
+    <ul>
+        <li>Food: Breaded Steak</li>
+        <li>Video Game Genre: FPS</li>
+        <li>Color: Green/Red</li>
+    </ul>
+    <h3>Top Ten Goals After Graduation</h3>
+    <ol>
+        <li>Attend College
+        <li>Move out from my parents' home
+        <li>
+        <li>
+        <li>
+        <li>
+        <li>
+        <li>
+        <li>Stay in contact with high school friends
+        <li>Have my own car
+    </ol>
+    <hr>
     <h4><a href="Daniel.html" target="_blank">Daniel's Page</a> <a href="Rocsana.html" target="_blank">Rocsana's Page</a></h4>
 
 
