--- a/Daniel.html
+++ b/Daniel.html
@@ -34,13 +34,10 @@
     <h3>My Four Favorite Websites</h3>
     <table>
     <tr>
-    <th>Website Name</th>
-    </tr>
-    <tr>
-    <a href="https://www.youtube.com/" target="_blank">YouTube</a>
-    <a href="https://twitter.com/" target="_blank">Twitter</a>
-    <a href="https://www.amazon.com/" target="_blank">Amazon</a>
-    <a href="https://phansite.net/" target="_blank">The Phantom Aficiando Website</a>
+    <td><a href="https://www.youtube.com/" target="_blank">YouTube</a></td>
+    <td><a href="https://twitter.com/" target="_blank">Twitter</a></td>
+    <td><a href="https://www.amazon.com/" target="_blank">Amazon</a></td>
+    <td><a href="https://phansite.net/" target="_blank">The Phantom Aficiando Website</a></td>
     </tr>
     </table>
     <hr/>
