--- a/Rocsana.html
+++ b/Rocsana.html
@@ -4,6 +4,11 @@
       <link rel="stylesheet" href="styles.css">
     </head>
   <body>
+        <h2> Want to view the othetr creators?</h2>
+      <ul>
+      <li><a href= "Max.html" target="_blank"> Max's Webpage</a></li>
+      <li><a href= "Daniel.html" target="_blank"> Daniel's Webpage</a> </li>
+      </ul>
      <title>Rocsana's Webpage</title>
       <h1> Rocsana De Leon</h1>
     <img src="./Pics/Rocks.jpg" Width="" Height= "350">
@@ -12,11 +17,6 @@
     <p> Rocsana was born on April 9th, in Marin general hospital. Growing up she was really into dolls and watching tv shows with her older sister. Her hobbies include playing soccer, hiking, and running. She has four other siblings and she is the middle child, Rocsana enjoys spending time with her family and friends. Some of her interest are reading good books and trying new things, she overall is really adventurous and optimistic.  </p>
     <link rel="stylesheet" href="styles.css">
 
-<body>
-    <title>Rocsana's Biography</title>
-    <h2> Background Info.</h2>
-    <hr/>
-    <p> Rocsana was born on April 9th, in Marin general hospital. Growing up she was really into dolls and watching tv shows with her older sister. Her hobbies include playing soccer, hiking, and running. She has four other siblings and she is the middle child, Rocsana enjoys spending time with her family and friends. Some of her interest are reading good books and trying new things, she overall is really adventurous and optimistic. </p>
     <h4> Favorite Quote: "Winter is coming" </h4>
     <hr/>
     <h4>Top Ten List of things I want to do when I graduate:</h4>
