--- a/Rocsana.html
+++ b/Rocsana.html
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<<<<<<< HEAD
-      <link rel="stylesheet" href="styles.css">
-    </head>
-  <body>
-     <title>Rocsana's Webpage</title>
-      <h1> Rocsana De Leon</h1>
-    <img src="./Pics/Rocks.jpg" Width="" Height= "350">
-      <h2> Background Info.</h2>
-      <hr/>
-    <p> Rocsana was born on April 9th, in Marin general hospital. Growing up she was really into dolls and watching tv shows with her older sister. Her hobbies include playing soccer, hiking, and running. She has four other siblings and she is the middle child, Rocsana enjoys spending time with her family and friends. Some of her interest are reading good books and trying new things, she overall is really adventurous and optimistic.  </p>
-=======
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -21,7 +11,7 @@
     <h2> Background Info.</h2>
     <hr/>
     <p> Rocsana was born on April 9th, in Marin general hospital. Growing up she was really into dolls and watching tv shows with her older sister. Her hobbies include playing soccer, hiking, and running. She has four other siblings and she is the middle child, Rocsana enjoys spending time with her family and friends. Some of her interest are reading good books and trying new things, she overall is really adventurous and optimistic. </p>
->>>>>>> Origin/master
+    >>>>>>> Origin/master
     <h4> Favorite Quote: "Winter is coming" </h4>
     <hr/>
     <h4>Top Ten List of things I want to do when I graduate:</h4>
@@ -37,16 +27,15 @@
         <li> Buy a new bike</li>
         <li> Save money</li>
     </ol>
-    <hr/>
+    <hr>
     <h4>Favorite Things</h4>
     <ul>
         <li>Food:
-            <ul> Pupusas</ul>
-            <ul> Fries</ul>
-            <ul> Pasta</ul>
-            <ul> Ice Cream</ul>
-        </li>
-        <li>T.V.shows:
+            <ul>Pupusas</ul>
+            <ul>Fries</ul>
+            <ul>Pasta</ul>
+            <ul>Ice Cream</ul>
+            <li>T.V.shows:</li>
             <ul> The office</ul>
             <ul> Grey's Anatomy</ul>
             <ul> Criminal Minds</ul>
@@ -54,39 +43,26 @@
             <ul> Vampire Diaries</ul>
             <ul> Fear of the Walking Dead</ul>
             <ul> Game of Thrones!</ul>
-<<<<<<< HEAD
-          </li>
-          <li>The Outdoors</li>
-          <li>Sleeping</li>
-          <li> family</li>
-          <li>  Being Organized</li>
-             <li> Doodling </li>
-     </ul>
-      <hr/>
-      <h5>4 Favorite Websites:</h5>
-      <table>
-          <th>Website</th>
-          <th>Link</th>
-          <tr>
-              Google: <td> <a href="http://Google.com" target="_blank"></a></td>
-              Youtube: <td> <a href="http:// Youtube.com" target="_blank"></a></td>
-
-
-      </table>
-     </body>
-=======
-        </li>
-        <li>The Outdoors Sleeping family Being Organized Doodling
-        </li>
+            <li>The Outdoors</li>
+            <li>Sleeping</li>
+            <li> family</li>
+            <li> Being Organized</li>
+            <li> Doodling </li>
     </ul>
-    <hr/>
+    <hr>
     <h5>4 Favorite Websites:</h5>
     <table>
-        Google:
-        <a href="http://Google.com" target="_blank"></a>
-        Youtube:
-        <a href="http:// Youtube.com" target="_blank"></a>
-    </table>
+        <th>Website</th>
+        <th>Link</th>
+        <tr>
+            Google:
+            <td>
+                <a href="http://Google.com" target="_blank"></a>
+            </td>
+            Youtube:
+            <td>
+                <a href="http:// Youtube.com" target="_blank"></a>
+            </td>
 </body>
->>>>>>> Origin/master
+
 </html>
