Final commit today

--- a/Max.html
+++ b/Max.html
@@ -17,27 +17,42 @@
     <hr>
     <h3>My List of Favorite Things</h3>
     <ul>
-        <li>Food: Breaded Steak</li>
+        <li>Food: Hamburges</li>
         <li>Video Game Genre: FPS</li>
         <li>Color: Green/Red</li>
     </ul>
     <h3>Top Ten Goals After Graduation</h3>
     <ol>
-        <li>Attend College
-        <li>Move out from my parents' home
-        <li>
-        <li>
-        <li>
-        <li>
-        <li>
-        <li>
-        <li>Stay in contact with high school friends
+        <li>Go to College
+        <li>Get my own apartment
+        <li>Get a job
+        <li>Have fun
+        <li>Get a better job
+        <li>Save up some money
+        <li>Make new friends
+        <li>Make games
+        <li>Continue being friends with my current friends
         <li>Have my own car
     </ol>
-    <hr>
-    <h4><a href="Daniel.html" target="_blank">Daniel's Page</a> <a href="Rocsana.html" target="_blank">Rocsana's Page</a></h4>
-
-
-</body>
-
-</html>
+<table>
+    <th> Links: </th>
+   <tr>
+            <td><a href=https://www.cursors.io/ target="_blank">Cursors</a></td>
+        </tr>
+     <tr>
+            <td><a href="http://www.youtube.com/" target="_blank">YouTube</a></td>
+        </tr>
+    <tr>
+            <td><a href=https://www.twitch.com/ target="_blank">Twitch</a></td>
+        </tr>
+     <tr>
+            <td><a href=http://netflix.com/ target="_blank">Netflix</a></td>
+        </tr>
+</table>
+            <hr/>
+      <ul>
+      <li><a href= "Max.html" target="_blank"> Max's Webpage</a></li>
+      <li><a href= "Daniel.html" target="_blank"> Daniel's Webpage</a> </li>
+      </ul>
+      </body>
+     </html>
