--- a/Daniel.html
+++ b/Daniel.html
@@ -2,7 +2,11 @@
 <html>
 <head>
     <title>Daniel's Bio</title>
-    <link rel="stylesheet" href="styles.css">
+      <meta charset="utf-8">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <h1>Daniel Ramirez</h1>
 <img src="./Pics/callcard.png" alt="cc pict here" width="216" height="192">
@@ -11,7 +15,9 @@
     <h1>Who Am I?</h1>
     <p>My name is Daniel Ramirez. I was born on April 25th, 2001 in Greenbrae, California. My goals in life are to become a video game developer. My hobbies include gaming, archery, and reading. My name is actually based on someone in the Bible, as well as my brothers' names. I also have the zodiac sign of the Taurus.</p>
     <h3>My favorite quote</h3>
-    <p>"It's all strength and power with you. If you're so desparate for a show of force, I'll be happy to oblige." - Kliff, Fire Emblem Echoes: Shadows Of Valentia</p>
+<blockquote>
+  <p>"It's all strength and power with you. If you're so desparate for a show of force, I'll be happy to oblige." - Kliff, Fire Emblem Echoes: Shadows Of Valentia</p>
+</blockquote>
     <hr>
     <h3>My List of Favorite Things</h3>
     <ul>
