--- a/Max.html
+++ b/Max.html
@@ -2,7 +2,11 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <title>
         Max's Bio
     </title>
@@ -13,7 +17,9 @@
     <img src="./Pics/Morgoono.png" alt="cc pict here" width="300" height="200">
     <p>My name is Max Rahe and I am 15 yeas old. I was born on January 29th, 2002. I am in 10th grade and almost old enough to drive. I like to play video games and have been fasinated with coding for almost 4 years.</p>
     <h3>My favorite quote</h3>
-    <p>"I didn't know owls could fly" -H20 Delirious (2016)</p>
+    <blockquote>
+  <p> "I didn't know owls could fly" -H20 Delirious (2016)</p>
+</blockquote>
     <hr>
     <h3>My List of Favorite Things</h3>
     <ul>
