--- a/Rocsana.html
+++ b/Rocsana.html
@@ -2,18 +2,24 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 
 <body>
     <title>Rocsana's Webpage</title>
     <h1> Rocsana De Leon</h1>
-    <img src="./Pics/Rocks.jpg" Width="" Height="350">
+   <img class="img-circle" src="Pics/Rocks.jpg" height= 360 width= 500>
     <h2> Background Info.</h2>
     <hr/>
     <p> Rocsana was born on April 9th, in Marin general hospital. Growing up she was really into dolls and watching tv shows with her older sister. Her hobbies include playing soccer, hiking, and running. She has four other siblings and she is the middle child, Rocsana enjoys spending time with her family and friends. Some of her interest are reading good books and trying new things, she overall is really adventurous and optimistic. </p>
-    <h4> Favorite Quote: "Winter is coming" </h4>
-    <hr/>
+<blockquote>
+  <p>"Winter is coming"- Game of Thrones</p>
+</blockquote>
+      <hr/>
     <h4>Top Ten List of things I want to do when I graduate:</h4>
     <ol>
         <li>Go to college</li>
@@ -27,6 +33,7 @@
         <li> Buy a new bike</li>
         <li> Save money</li>
     </ol>
+
     <hr>
     <h4>Favorite Things</h4>
     <ul>
@@ -51,7 +58,7 @@
             <li> Doodling </li>
     </ul>
     <hr>
-    <table>
+<table class="table table-bordered">
         <th> Links: </th>
         <tr>
             <td><a href=https://www.Google.com/ target="_blank">Google</a></td>
