--- a/Max.html
+++ b/Max.html
@@ -8,7 +8,7 @@
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <title>
-        Max's Bio
+        Max's Webpage
     </title>
 </head>
 
