--- a/Rocsana.html
+++ b/Rocsana.html
@@ -10,12 +10,18 @@
 </head>
 
 <body>
+	<div calss="container">
     <title>Rocsana's Webpage</title>
     <h1> Rocsana De Leon</h1>
+	<div class="row">
+	<div class="col-sm-4 ">
    <img class="img-circle" src="Pics/Rocks.jpg" height= 360 width= 500>
+
     <h2> Background Info.</h2>
     <hr/>
     <p> Rocsana was born on April 9th, in Marin general hospital. Growing up she was really into dolls and watching tv shows with her older sister. Her hobbies include playing soccer, hiking, and running. She has four other siblings and she is the middle child, Rocsana enjoys spending time with her family and friends. Some of her interest are reading good books and trying new things, she overall is really adventurous and optimistic. </p>
+		</div>
+		</div>
 <blockquote>
   <p>"Winter is coming"- Game of Thrones</p>
 </blockquote>
@@ -82,5 +88,6 @@
         <li><a href="Max.html" target="_blank"> Max's Webpage</a></li>
         <li><a href="Daniel.html" target="_blank"> Daniel's Webpage</a> </li>
     </ul>
+		</div>
 </body>
 </html>
