--- a/Rocsana.html
+++ b/Rocsana.html
@@ -2,92 +2,95 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<meta charset="utf-8">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 
 <body>
-	<div calss="container">
-    <title>Rocsana's Webpage</title>
-    <h1> Rocsana De Leon</h1>
-	<div class="row">
-	<div class="col-sm-4 ">
-   <img class="img-circle" src="Pics/Rocks.jpg" height= 360 width= 500>
-
-    <h2> Background Info.</h2>
-    <hr/>
-    <p> Rocsana was born on April 9th, in Marin general hospital. Growing up she was really into dolls and watching tv shows with her older sister. Her hobbies include playing soccer, hiking, and running. She has four other siblings and she is the middle child, Rocsana enjoys spending time with her family and friends. Some of her interest are reading good books and trying new things, she overall is really adventurous and optimistic. </p>
+	<div class="container">
+		<title>Rocsana's Webpage</title>
+		<div class="row">
+			<div class="col-sm-4 ">
+				<img class="img-circle" src="Pics/Rocks.jpg" height=360 width=500>
+				<h1> Rocsana De Leon</h1>
+				<div class="col-sm-8">
+					<h2> Biography</h2>
+					<hr/>
+					<p> Rocsana was born on April 9th, in Marin general hospital. Growing up she was really into dolls and watching tv shows with her older sister. Her hobbies include playing soccer, hiking, and running. She has four other siblings and she is the middle child, Rocsana enjoys spending time with her family and friends. Some of her interest are reading good books and trying new things. </p>
+				</div>
+			</div>
 		</div>
-		</div>
-<blockquote>
-  <p>"Winter is coming"- Game of Thrones</p>
-</blockquote>
-      <hr/>
-    <h4>Top Ten List of things I want to do when I graduate:</h4>
-    <ol>
-        <li>Go to college</li>
-        <li>Spend more time with friends</li>
-        <li>To go out more into nature</li>
-        <li>Work less</li>
-        <li>Watch t.v. shows</li>
-        <li>Read/Discover new books</li>
-        <li>Go on more runs</li>
-        <li> Visit my grandparent's home</li>
-        <li> Buy a new bike</li>
-        <li> Save money</li>
-    </ol>
+			<blockquote>
+				<p>"Winter is coming"- Game of Thrones</p>
+			</blockquote>
 
-    <hr>
-    <h4>Favorite Things</h4>
-    <ul>
-        <li>Food:
-            <ul>Pupusas</ul>
-            <ul>Fries</ul>
-            <ul>Pasta</ul>
-            <ul>Ice Cream</ul>
-            <li>T.V.shows:</li>
-            <ul> The office</ul>
-            <ul> Grey's Anatomy</ul>
-            <ul> Criminal Minds</ul>
-            <ul> Adventure Time</ul>
-            <ul> Vampire Diaries</ul>
-            <ul> Fear of the Walking Dead</ul>
-            <ul> Game of Thrones!</ul>
-            <hr>
-            <li>The Outdoors</li>
-            <li>Sleeping</li>
-            <li> family</li>
-            <li> Being Organized</li>
-            <li> Doodling </li>
-    </ul>
-    <hr>
-<table class="table table-bordered">
-        <th> Links: </th>
-        <tr>
-            <td><a href=https://www.Google.com/ target="_blank">Google</a></td>
-            <td> To look up things that I do not understand
-        </tr>
-        <tr>
-            <td><a href="http://www.youtube.com/" target="_blank">YouTube</a></td>
-            <td> Watch my favoirte youtubers</td>
-        </tr>
-        <tr>
-            <td><a href=https://www.spotify.com/ target="_blank">Spotify</a></td>
-            <td> Discover new music and I like to make playlists for different occassions
-        </tr>
-        <tr>
-            <td><a href=http://netflix.com/ target="_blank">Netflix</a></td>
-            <td> Spend my free time watching my favorite shows
-        </tr>
-    </table>
-    <hr/>
-    <ul>
-        <li><a href="Max.html" target="_blank"> Max's Webpage</a></li>
-        <li><a href="Daniel.html" target="_blank"> Daniel's Webpage</a> </li>
-    </ul>
+			<hr/>
+			<h4>Top Ten List of things I want to do when I graduate:</h4>
+			<ol>
+				<li>Go to college</li>
+				<li>Spend more time with friends</li>
+				<li>To go out more into nature</li>
+				<li>Work less</li>
+				<li>Watch t.v. shows</li>
+				<li>Read/Discover new books</li>
+				<li>Go on more runs</li>
+				<li> Visit my grandparent's home</li>
+				<li> Buy a new bike</li>
+				<li> Save money</li>
+			</ol>
+
+			<hr>
+			<h4>Favorite Things</h4>
+			<ul>
+				<li>Food:
+					<ul>Pupusas</ul>
+					<ul>Fries</ul>
+					<ul>Pasta</ul>
+					<ul>Ice Cream</ul>
+					<li>T.V.shows:</li>
+					<ul> The office</ul>
+					<ul> Grey's Anatomy</ul>
+					<ul> Criminal Minds</ul>
+					<ul> Adventure Time</ul>
+					<ul> Vampire Diaries</ul>
+					<ul> Fear of the Walking Dead</ul>
+					<ul> Game of Thrones!</ul>
+					<hr>
+					<li>The Outdoors</li>
+					<li>Sleeping</li>
+					<li> family</li>
+					<li> Being Organized</li>
+					<li> Doodling </li>
+			</ul>
+			<hr>
+			<table class="table table-bordered">
+				<th> Links: </th>
+				<tr>
+					<td><a href=https://www.Google.com/ target="_blank">Google</a></td>
+					<td> To look up things that I do not understand
+				</tr>
+				<tr>
+					<td><a href="http://www.youtube.com/" target="_blank">YouTube</a></td>
+					<td> Watch my favoirte youtubers</td>
+				</tr>
+				<tr>
+					<td><a href=https://www.spotify.com/ target="_blank">Spotify</a></td>
+					<td> Discover new music and I like to make playlists for different occassions
+				</tr>
+				<tr>
+					<td><a href=http://netflix.com/ target="_blank">Netflix</a></td>
+					<td> Spend my free time watching my favorite shows
+				</tr>
+			</table>
+			<hr/>
+			<ul>
+				<li><a href="Max.html" target="_blank"> Max's Webpage</a></li>
+				<li><a href="Daniel.html" target="_blank"> Daniel's Webpage</a> </li>
+			</ul>
 		</div>
 </body>
+
 </html>
