--- a/Daniel.html
+++ b/Daniel.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!-- Reference to JavaScript -->
     <script language="javascript" type="text/javascript" src="web_java.js"></script>
 </head>
 <h1>Daniel Ramirez</h1>
