--- a/Max.html
+++ b/Max.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!-- Reference to JavaSScript -->
     <script language="javascript" type="text/javascript" src="web_java.js"></script>
     <title>
         Max's Webpage
