--- a/Max.html
+++ b/Max.html
@@ -29,16 +29,16 @@
     </ul>
     <h3>Top Ten Goals After Graduation</h3>
     <ol>
-        <li>Go to College
-            <li>Get my own apartment
-                <li>Get a job
-                    <li>Have fun
-                        <li>Get a better job
-                            <li>Save up some money
-                                <li>Make new friends
-                                    <li>Make games
-                                        <li>Continue being friends with my current friends
-                                            <li>Have my own car
+        <li>Go to College</li>
+        <li>Get my own apartment</li>
+        <li>Get a job</li>
+        <li>Have fun</li>
+        <li>Get a better job</li>
+        <li>Save up some money</li>
+        <li>Make new friends</li>
+        <li>Make games</li>
+        <li>Continue being friends with my current friends</li>
+        <li>Have my own car</li>
     </ol>
     <table>
         <th> Links: </th>
