--- a/Rocsana.html
+++ b/Rocsana.html
@@ -8,7 +8,7 @@
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Reference to JavaScript -->
-    <script language="javascript" type="text/javascript" src="web_java.js"></script>
+    <script language="javascript" type="text/javascript" src="team_website_functions.js"></script>
 </head>
 
 <body>
