--- a/Max.html
+++ b/Max.html
@@ -17,6 +17,9 @@
 <body>
     <h1>Maxwell Rahe</h1>
     <img src="./Pics/Morgoono.png" alt="cc pict here" width="300" height="200">
+    <script>
+        document.write(dateMessage());
+    </script>
     <p>My name is Max Rahe and I am 15 yeas old. I was born on January 29th, 2002. I am in 10th grade and almost old enough to drive. I like to play video games and have been fasinated with coding for almost 4 years.</p>
     <h3>My favorite quote</h3>
     <blockquote>
