--- a/Rocsana.html
+++ b/Rocsana.html
@@ -17,7 +17,13 @@
         <div class="row">
             <div class="col-sm-4 ">
                 <img class="img-circle" src="Pics/Rocks.jpg" height=360 width=500>
+
                 <h1> Rocsana De Leon</h1>
+                <br>
+                <script>
+                    document.write(dateMessage());
+
+                </script>
                 <div class="col-sm-8">
                     <h2> Biography</h2>
                     <hr/>
