--- a/Max.html
+++ b/Max.html
@@ -19,10 +19,18 @@
     <img src="./Pics/Morgoono.png" alt="cc pict here" width="300" height="200">
     <br>
     <script>
-        document.write(dateMessage(), "<br>");
-        document.write(birthdayCountDown(1/29/2002));
+        dateMessage();
     </script>
-    <p>My name is Max Rahe and I am 15 yeas old. I was born on January 29th, 2002. I am in 10th grade and almost old enough to drive. I like to play video games and have been fasinated with coding for almost 4 years.</p>
+    <br>
+    <script>
+        birthdayCountDown(1 / 29 / 2002);
+    </script>
+    days until my birthday
+    <p>My name is Max Rahe and I am
+        <script>
+            calculateAge(1 / 29 / 2002);
+        </script>
+        years old. I was born on January 29th, 2002. I am in 10th grade and almost old enough to drive. I like to play video games and have been fasinated with coding for almost 4 years.</p>
     <h3>My favorite quote</h3>
     <blockquote>
         <p> "I didn't know owls could fly" -H20 Delirious (2016)</p>
@@ -64,8 +72,8 @@
     </table>
     <hr/>
     <ul>
-        <li><a href="Rocsana.html" target="_blank"> Rocsana's Webpage</a></li>
-        <li><a href="Daniel.html" target="_blank"> Daniel's Webpage</a> </li>
+        <li><a href="Rocsana.html" target="_blank">Rocsana's Webpage</a></li>
+        <li><a href="Daniel.html" target="_blank">Daniel's Webpage</a> </li>
     </ul>
 </body>
 
