Rocsanaa's page adding message

--- a/Rocsana.html
+++ b/Rocsana.html
@@ -21,9 +21,11 @@
                 <h1> Rocsana De Leon</h1>
                 <br>
                 <script>
-                    document.write(dateMessage());
-
-                </script>
+                   (dateMessage()), "<br>";
+				</script>
+				<script>
+			(birthdayCountDownown(04 /09 /2000));
+				</script>
                 <div class="col-sm-8">
                     <h2> Biography</h2>
                     <hr/>
