--- a/Max.html
+++ b/Max.html
@@ -23,12 +23,12 @@
     </script>
     <br>
     <script>
-        birthdayCountDown(1 / 29 / 2002);
+        birthdayCountDown("1 / 29 / 2002");
     </script>
     days until my birthday
     <p>My name is Max Rahe and I am
         <script>
-            calculateAge(1 / 29 / 2002);
+            calculateAge (2002);
         </script>
         years old. I was born on January 29th, 2002. I am in 10th grade and almost old enough to drive. I like to play video games and have been fasinated with coding for almost 4 years.</p>
     <h3>My favorite quote</h3>
