trying to fix bugs

--- a/Daniel.html
+++ b/Daniel.html
@@ -18,7 +18,7 @@
 
     <script>
         dateMessage();
-
+        birthdayCountDown("4/25/2001");
     </script>
     <h1>Who Am I?</h1>
     <p>My name is Daniel Ramirez. I was born on April 25th, 2001 in Greenbrae, California. My goals in life are to become a video game developer. My hobbies include gaming, archery, and reading. My name is actually based on someone in the Bible, as well as my brothers' names. I also have the zodiac sign of the Taurus.</p>
