--- a/Max.html
+++ b/Max.html
@@ -26,10 +26,7 @@
         birthdayCountDown("1 / 29 / 2002");
     </script>
     days until my birthday
-    <p>My name is Max Rahe and I am
-        <script>
-            calculateAge (2002);
-        </script>
+    <p>My name is Max Rahe and I am 15
         years old. I was born on January 29th, 2002. I am in 10th grade and almost old enough to drive. I like to play video games and have been fasinated with coding for almost 4 years.</p>
     <h3>My favorite quote</h3>
     <blockquote>
