--- a/Rocsana.html
+++ b/Rocsana.html
@@ -30,10 +30,8 @@
                     <h2> Biography</h2>
                     <hr/>
 			   <script></script>
-					<script>document.write(dayNumber, ending)</script>
-					<script>document.write(daysuntil 04/09/2000) </script>
-
-
+					<script>document.write(dayNumber, ending)
+						document.write(daysuntil 04/09/2000) </script>
 					<p> Rocsana was born on April 9th, in Marin general hospital. Growing up she was really into dolls and watching tv shows with her older sister. Her hobbies include playing soccer, hiking, and running. She has four other siblings and she is the middle child, Rocsana enjoys spending time with her family and friends. Some of her interest are reading good books and trying new things. </p>
                 </div>
             </div>
