--- a/Daniel.html
+++ b/Daniel.html
@@ -69,7 +69,7 @@
         <hr/>
         <ul>
             <li><a href="Rocsana.html" target="_blank"> Rocsana's Website</a></li>
-            <li><a href="Daniel.html" target="_blank"> Daniel's Website</a> </li>
+            <li><a href="Max.html" target="_blank"> Max's Website</a> </li>
         </ul>
 </body>
 
