Spelling error fixed

--- a/Daniel.html
+++ b/Daniel.html
@@ -55,7 +55,7 @@
             </tr>
             <tr>
                 <td><a href="https://twitter.com/" target="_blank">Twitter</a></td>
-                <td> Keeping up wth the shenanagins of the internet is quite fun!</td>
+                <td> Keeping up wth the shenanigans of the internet is quite fun!</td>
             </tr>
             <tr>
                 <td><a href="https://www.amazon.com/" target="_blank">Amazon</a></td>
