finished all code

--- a/Max.html
+++ b/Max.html
@@ -19,6 +19,10 @@
     <img src="./Pics/Morgoono.png" alt="cc pict here" width="300" height="200">
     <br>
     <script>
+        greeting();
+    </script>
+    <br>
+    <script>
         dateMessage();
     </script>
     <br>
@@ -26,8 +30,7 @@
         birthdayCountDown("1 / 29 / 2002");
     </script>
     days until my birthday
-    <p>My name is Max Rahe and I am 15
-        years old. I was born on January 29th, 2002. I am in 10th grade and almost old enough to drive. I like to play video games and have been fasinated with coding for almost 4 years.</p>
+    <p>My name is Max Rahe and I am 15 years old. I was born on January 29th, 2002. I am in 10th grade and almost old enough to drive. I like to play video games and have been fasinated with coding for almost 4 years.</p>
     <h3>My favorite quote</h3>
     <blockquote>
         <p> "I didn't know owls could fly" -H20 Delirious (2016)</p>
