--- a/Rocsana.html
+++ b/Rocsana.html
@@ -19,13 +19,16 @@
                 <img class="img-circle" src="Pics/Rocks.jpg" height=360 width=500>
 
                 <h1> Rocsana De Leon</h1>
+
                 <br>
                 <script>
-                   (dateMessage()), "<br>";
+                   dateMessage();
 				</script>
+				<br>
 				<script>
-			(birthdayCountDownown(04 /09 /2000));
+			birthdayCountDown("04 /09 /2000");
 				</script>
+				days unitl my birthday
                 <div class="col-sm-8">
                     <h2> Biography</h2>
                     <hr/>
