Added the greeting

--- a/Rocsana.html
+++ b/Rocsana.html
@@ -19,7 +19,9 @@
                 <img class="img-circle" src="Pics/Rocks.jpg" height=360 width=500>
 
                 <h1> Rocsana De Leon</h1>
-
+				<script>
+					greeting();
+				</script>
                 <br>
                 <script>
 
