--- a/Rocsana.html
+++ b/Rocsana.html
@@ -19,7 +19,9 @@
                 <img class="img-circle" src="Pics/Rocks.jpg" height=360 width=500>
 
                 <h1> Rocsana De Leon</h1>
-
+                <script>
+                    greeting();
+                </script>
                 <br>
                 <script>
 
@@ -32,7 +34,6 @@
                 <div class="col-sm-8">
                     <h2> Biography</h2>
                     <hr/>
-                    <script></script>
                     <script>
                         document.write(dayNumber, ending)
                         document.write(daysuntil 04 / 09 / 2000)
